2012-11-13  Jochen Eisinger  <jochen@chromium.org>

        [chromium] TestRunner should depend on webkit_wtf_support instead of compiling the files itself
        https://bugs.webkit.org/show_bug.cgi?id=102075

        Reviewed by Pavel Feldman.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:

2012-11-13  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL][DRT] Remove extra layoutFrame() call when preparing to send an event via EventSender.
        https://bugs.webkit.org/show_bug.cgi?id=102074

        Reviewed by Kenneth Rohde Christiansen.

        * DumpRenderTree/efl/EventSender.cpp:
        (feedMouseEvent): Do not call DumpRenderTreeSupportEfl::layoutFrame()
        when sending an event, as it causes additional repaints that create
        wrong pixel results for tests such as
        fast/repaint/overflow-auto-in-overflow-auto-scrolled.html.

2012-11-13  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Enable Mutation observer
        https://bugs.webkit.org/show_bug.cgi?id=102066

        Reviewed by Pavel Feldman.

        * qmake/mkspecs/features/features.pri:

2012-11-13  Xiaobo Wang  <xbwang@torchmobile.com.cn>

        [BlackBerry] DRT - platform/blackberry/editing/text-iterator/findString-markers.html failed
        https://bugs.webkit.org/show_bug.cgi?id=102056

        Reviewed by Rob Buis.

        RIM PR 235836

        TestRunner::findString() was changed to call Page::findString() instead
        of WebPage::findNextString(). Page::findString() doesn't update
        TextMatch markers.
        Work-around by calling both Page::findString() and WebPage::findNextString().

        * DumpRenderTree/blackberry/TestRunnerBlackBerry.cpp:
        (TestRunner::findString):

2012-11-12  Jochen Eisinger  <jochen@chromium.org>

        Add the TestRunner public API to the ChromiumPublicApi watchlist, and introduce an entry for ChromiumTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=101957
